# libdaemonize

./: .gitignore  AUTHORS  BuildGuide  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  daemon_t.cpp  daemonizer.cpp  daemonizer.hpp  libdaemonize-1.0.pc.in  libtool  logger.cpp
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
package/: PKGBUILD
src/: daemon.cpp  daemon.hpp  daemon_t.hpp  daemonizer.cpp  daemonizer.hpp  logger.cpp  logger.hpp
src/daemonize/: daemon.cpp  daemon.hpp  daemonizer.cpp  daemonizer.hpp  logger.cpp  logger.hpp  signals.cpp  signals.hpp  syslog.cpp  syslog.hpp
